# wasm-emoji

./: .gitignore  Cargo.toml  README.md  emojis.js
public/: index.html
src/: emojis.rs  lib.rs
