[package]
name = "wasm-emoji"
version = "0.1.0"
authors = ["steven.roulleau <steven.roulleau@myscript.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lazy_static = "1.4.0"
